# impy

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  api.html  genindex.html  impy.arrays.html  impy.frame.html  impy.html  impy.viewer.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  start.py  test.tif  tutorial.html  tutorial_viewer.html
.doctrees/: api.doctree  environment.pickle  impy.arrays.doctree  impy.doctree  impy.frame.doctree  impy.viewer.doctree  index.doctree  tutorial.doctree  tutorial_viewer.doctree
_modules/: index.html
_modules/impy/: axes.html  binder.html  collections.html  core.html  correlation.html
_sources/: impy.rst.txt  impy.viewer.rst.txt  index.rst.txt  tutorial.rst.txt  tutorial_viewer.rst.txt
_static/: documentation_options.js
docs/: .buildinfo  api.html  conf.py  genindex.html  impy.arrays.bases.html  impy.arrays.html  impy.arrays.utils.html  impy.arrays.utils.rst  impy.frame.html  impy.html  impy.rst  impy.utils.html  impy.viewer.html  impy.viewer.widgets.html  index.html  index.rst  modules.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js  start.rst  tutorial.html  tutorial.rst  tutorial_axes.html  tutorial_cmd.html  tutorial_viewer.html  tutorial_viewer.rst
docs/.doctrees/: api.doctree  environment.pickle  impy.arrays.bases.doctree  impy.arrays.doctree  impy.arrays.utils.doctree  impy.doctree  impy.frame.doctree  impy.utils.doctree  impy.viewer.doctree  impy.viewer.widgets.doctree  index.doctree  modules.doctree  tutoral_axes.doctree  tutorial.doctree  tutorial_axes.doctree  tutorial_cmd.doctree  tutorial_viewer.doctree
docs/_modules/: impy.html  index.html
docs/_sources/: impy.arrays.bases.rst.txt  impy.arrays.rst.txt  impy.rst.txt  impy.viewer.widgets.rst.txt  index.rst.txt  tutorial.rst.txt  tutorial_axes.rst.txt  tutorial_cmd.rst.txt
docs/_static/: documentation_options.js
impy/: __init__.py  __main__.py  _const.py  _cupy.py  _process.py  _process_numba.py  _skimage.py  _types.py  array_api.py  axes.py  base.py  binder.py  collections.py  core.py  correlation.py  datalist.py  deco.py  func.py  gauss.py  glcm.py  historyarray.py  imgarray.py  io.py  label.py  labeledarray.py  metaarray.py  phasearray.py  proparray.py  random.py  roi.py  specials.py  utilcls.py  viewer.py
rst/: api.rst  conf.py  impy.frame.rst  impy.rst  impy.viewer.rst  index.rst  modules.rst  tutoral_axes.rst  tutorial.rst  tutorial_axes.rst
tests/: conftest.py  test_astype.py  test_axes.py  test_big.py  test_bind.py  test_broadcasting.py  test_collection.py  test_correlation.py  test_crop.py  test_fft.py  test_gaussfit.py  test_io.py  test_labels.py  test_lazy.py  test_map_coords.py  test_methods.py  test_numpy_functions.py  test_props_functions.py  test_radon.py  test_random.py  test_roi.py  test_shape.py  test_slicing.py
(+244 files in other folders)
