[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "impy-array"
dynamic = ["version"]
description = "Speed up coding/extending image analysis in Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    { name = "Hanjin Liu", email = "liuhanjin-sc@g.ecc.u-tokyo.ac.jp" },
]
dependencies = [
    "dask>=2021.6.0",
    "numpy>=1.22",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-image>=0.20.0",
]

[project.optional-dependencies]
all = [
    "tifffile",
    "roifile",
    "mrcfile",
    "napari>=0.4.17",
    "zarr",
]
napari = [
    "napari>=0.4.17",
]
tiff = [
    "tifffile",
]
mrc = [
    "mrcfile",
]
zarr = [
    "zarr",
]
testing = [
    "pytest",
    "dask_image",
    "tifffile",
    "roifile",
    "mrcfile",
    "zarr",
]

[project.scripts]
impy = "impy.__main__:main"

[project.urls]
Download = "https://github.com/hanjinliu/impy"

[tool.hatch.version]
path = "impy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/impy",
]

[tool.hatch.build.targets.wheel]
packages = [
    "/impy"
]
